apps/teslamate/postgres/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: teslamate-postgres
  namespace: teslamate
spec:
  serviceName: teslamate-postgres
  replicas: 1
  selector:
    matchLabels:
      app: teslamate-postgres
  template:
    metadata:
      annotations:
        k8up.io/backupcommand: pg_dumpall -U postgres -h 127.0.0.1
      labels:
        app: teslamate-postgres
    spec:
      containers:
        - name: teslamate-postgres
          image: postgres:16.2-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
          livenessProbe:
            exec:
              command:
                - "psql"
                - "-w"
                - "-U"
                - "postgres"
                - "-d"
                - "postgres"
                - "-c"
                - "SELECT 1"
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
          resources: {}
      restartPolicy: Always
      automountServiceAccountToken: false
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
