apps/teslamate/postgres/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate-postgres
  namespace: teslamate
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: teslamate-postgres
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: LoadBalancer
