apps/teslamate/postgres/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: teslamate-postgres
  namespace: teslamate
spec:
  endpointSelector:
    matchLabels:
      app: teslamate-postgres
  ingress:
    - fromCIDR:
        - 192.168.1.57/32
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: teslamate
        - matchLabels:
            app: teslamate-grafana
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
